--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,10 +26,10 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="{% url 'list_product' %}">Products</a>
+                            <a class="nav-link active" href="{% url 'list' model_name='product' %}">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active">Frutas</a>
+                            <a class="nav-link active" href="{% url 'list' model_name='category' %}">Categories</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active">Cores</a>
