--- a/templates/object_detail.html
+++ b/templates/object_detail.html
@@ -1,6 +1,18 @@
-<div>
-    <h1>{{ object.name }}</h1>
-    <!-- Add more details here -->
-    <a href="{% url 'update' model_name object.id %}">Update</a>
-    <a href="{% url 'delete' model_name object.id %}">Delete</a>
+{% extends 'layout.html' %}
+
+{% block content %}
+
+<div class="container">
+    <h1>{{ model_name|title }} Detail</h1>
+    <dl class="row">
+        <dt class="col-sm-3">ID:</dt>
+        <dd class="col-sm-9">{{ object.id }}</dd>
+        <dt class="col-sm-3">Name:</dt>
+        <dd class="col-sm-9">{{ object.name }}</dd>
+        <!-- Adicione mais campos conforme necessário -->
+    </dl>
+    <a href="{% url 'update' model_name object.id %}" class="btn btn-primary">Edit</a>
+    <a href="{% url 'delete' model_name object.id %}" class="btn btn-danger">Delete</a>
 </div>
+
+{% endblock %}
