--- a/templates/object_form.html
+++ b/templates/object_form.html
@@ -1,8 +1,14 @@
-<div>
+{% extends 'layout.html' %}
+
+{% block content %}
+
+<div class="container">
     <h1>{% if update %}Update{% else %}Create{% endif %} {{ model_name|title }}</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">{% if update %}Update{% else %}Create{% endif %}</button>
+        <button type="submit" class="btn btn-primary">{% if update %}Update{% else %}Create{% endif %}</button>
     </form>
 </div>
+
+{% endblock %}
